# cloud-init-GUI

./: LICENSE  README.md  app.py  cloud_init_generator.py  guestinfo_handler.py  iso_builder.py  main.py  ova_downloader.py  ova_handler.py  pyproject.toml  requirements.txt  run.bat  run.sh
tests/: test_cloud_init_generator.py  test_iso_builder.py  test_ova_handler.py
